--- a/index.html
+++ b/index.html
@@ -301,8 +301,7 @@
        
 
         <section class="map-contacts">
-            <section class="map" id="map">
-            </section>
+            <div class="cover  cover--flex" style="background-image: url(./img/body2.jpg); height: 700px;"></div>
             <section id="contacts" class="container container--small contacts">
                 <h4 class="cover__subtitle cover__subtitle--dark">Знайдіть нас</h4>
                     <div class="contacts__form">
